Update bundle ID to app.suibhne.app

--- a/Suibhne/Resources/Info.plist
+++ b/Suibhne/Resources/Info.plist
@@ -9,7 +9,7 @@
     <key>CFBundleIconFile</key>
     <string>AppIcon</string>
     <key>CFBundleIdentifier</key>
-    <string>bot.suibhne.app</string>
+    <string>app.suibhne.app</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
